<resources>
    <string name="app_name">Voicings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_view">TextView</string>
    <string name="select_by_type">Select by chord type</string>
    <string name="select_by_melody">Select by melody</string>
    <string name="select_by_style">select by chord style</string>
    <string name="menu_choix">Choix du voicing</string>
    <string name="menu_edit">Modifier les tables</string>
    <string name="headType">Type</string>
    <string name="headMelody">Melody</string>
    <string name="headStyle">Style</string>
    <string name="headLH">Left Hand</string>
    <string name="headRH">Right Hand</string>
</resources>