<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_heading_layout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/typeSpinnerLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_view"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/melodySpinnerLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_view"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="164dp" />

        <TextView
            android:id="@+id/styleSpinnerLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_view"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="202dp"
            tools:layout_editor_absoluteY="63dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <Spinner
            android:id="@+id/TypeSpinner"
            style="@android:style/Widget.Material.Spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:animateLayoutChanges="false"
            android:animationCache="false"
            android:dropDownWidth="match_parent"
            android:popupBackground="@drawable/blue_outline"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/MelodySpinner"
            style="@android:style/Widget.Material.Spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:dropDownWidth="match_parent"
            android:gravity="start|center_horizontal|center_vertical"
            android:popupBackground="@drawable/blue_outline"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/StyleSpinner"
            style="@android:style/Widget.Material.Spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:dropDownWidth="match_parent"
            android:popupBackground="@drawable/blue_outline"
            android:textAlignment="center" />
    </LinearLayout>
    <TableLayout
        android:id="@+id/table_heading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2">

        <TableRow>

            <TextView
                style="@style/table_header"
                android:layout_width="0dp"
                android:layout_height="30sp"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/headType"
                android:textAlignment="center" />

            <TextView
                style="@style/table_header"
                android:layout_width="0dp"
                android:layout_height="30sp"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingEnd="5sp"
                android:text="@string/headMelody"
                android:textAlignment="center" />

            <TextView
                style="@style/table_header"
                android:layout_width="0dp"
                android:layout_height="30sp"
                android:layout_column="2"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingEnd="5sp"
                android:text="@string/headStyle"
                android:textAlignment="center" />

            <TextView
                style="@style/table_header"
                android:layout_width="0dp"
                android:layout_height="30sp"
                android:layout_column="2"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingEnd="5sp"
                android:text="@string/headLH"
                android:textAlignment="center" />

            <TextView
                style="@style/table_header"
                android:layout_width="0dp"
                android:layout_height="30sp"
                android:layout_column="2"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingEnd="5sp"
                android:text="@string/headRH"
                android:textAlignment="center" />
        </TableRow>
    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/table_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:scrollbarSize="10dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarThumbVertical="@color/purple_200"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
        tools:layout_editor_absoluteX="-16dp">

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>